refactor: Create Rent Proposal